--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
